--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="col-md-5">
                 <img src="img/pashupati-darshan-img/genda.webp" alt="Explore Nepal Tour Package From Gorakhpur">
                  </div>
-                 
+
             <div class="col-md-7">
              <h1>Adventurous, Spiritual and Beautiful Nepal </h1>
             <P>Nepal is a beautiful country with diverse landscapes and rich cultural heritage influenced by Hinduism and Buddhism. There are various tour destinations available depending on your preferences and interests. Some popular attractions in Nepal include Kathmandu, Pokhara, Chitwan National Park, Lumbini, Bhaktapur, Nagarkot, Bandipur, Dhulikhel and the Everest region Where you can visit and get a new experience. Nepal is dotted with ancient temples, palaces, and monasteries. The UNESCO World Heritage Sites in Nepal include Pashupatinath Temple, Boudhanath Stupa, Swayambhunath Stupa, and Bhaktapur Durbar Square, among others.</P>
@@ -295,7 +295,7 @@
     <div class="col-md-4 col-sm-6 footer-widget">
     <div class="footer-wedget-one">
     <h2>About us</h2>
-    <p>RS Tour And Travels is a leading Tour operator for Nepal, Char-Dham Yatra, Manali, Kashmir, Gangtok & Darjeeling (Sikkim). We provide customised Tour Packages for Nepal from Gorakhpur. We have our own range of luxury vehicles across big (Bus & Tempo Traveller) and small ( Car) segments which helps in making travel convenient and affordable.</p>
+    <p>Shree Pashupati Darshan Nepal yatra tour & travels is a leading Tour operator for Nepal, Char-Dham Yatra, Manali, Kashmir, Gangtok & Darjeeling (Sikkim). We provide customised Tour Packages for Nepal from Gorakhpur. We have our own range of luxury vehicles across big (Bus & Tempo Traveller) and small ( Car) segments which helps in making travel convenient and affordable.</p>
     </div>
     </div>
     <div class="col-md-3 col-sm-6 footer-widget">
@@ -326,7 +326,7 @@
         <h2>Our Address</h2>
             <div class="footer-contact-info-text">
                 <span style="color:white;">
-                Gida Sector 13(s5/10),Gorakhpur</span>
+                    Nautanwa Bypass, Sanouli Road U.P. 273164 India</span>
            </div>
             <div class="footer-contact-info-text">
                 <span style="color:white">infoPashupati@gmail.com</span>
