--- a/muktinath-tour-package-from-gorakhpur.html
+++ b/muktinath-tour-package-from-gorakhpur.html
@@ -189,7 +189,7 @@
     <div class="col-md-4 col-sm-6 footer-widget">
     <div class="footer-wedget-one">
     <h2>About us</h2>
-    <p>RS Tour And Travels is a leading Tour operator for Nepal, Char-Dham Yatra, Manali, Kashmir, Gangtok & Darjeeling (Sikkim). We provide customised Tour Packages for Nepal from Gorakhpur. We have our own range of luxury vehicles across big (Bus & Tempo Traveller) and small ( Car) segments which helps in making travel convenient and affordable.</p>
+    <p>Shree Pashupati Darshan Nepal yatra tour & travels is a leading Tour operator for Nepal, Char-Dham Yatra, Manali, Kashmir, Gangtok & Darjeeling (Sikkim). We provide customised Tour Packages for Nepal from Gorakhpur. We have our own range of luxury vehicles across big (Bus & Tempo Traveller) and small ( Car) segments which helps in making travel convenient and affordable.</p>
     </div>
     </div>
     <div class="col-md-3 col-sm-6 footer-widget">
@@ -220,20 +220,20 @@
         <h2>Our Address</h2>
             <div class="footer-contact-info-text">
                 <span style="color:white;">
-                Gida Sector 13(s5/10),Gorakhpur</span>
+                    Nautanwa Bypass, Sanouli Road U.P. 273164 India</span>
            </div>
             <div class="footer-contact-info-text">
-                <span style="color:whiterkTour&Traveler@gmail.com</span>
+                <span style="color:white">infoPashupati@gmail.com</span>
             </div>
             <div class="footer-contact-info-text">
-            <span style="color:white;">+91-7355973995</span>
+            <span style="color:white;">+91-8004095274</span>
         </div>
     </div>
        <div class="whatsapp">
               <a href="#" target="_blank" width="10%"><img src="img/fb.png" class="img-responsive" alt="whatsapp"></a>
            </div>
         <div class="whatsapp2">
-              <a href="https://api.whatsapp.com/send?phone=917355973995&amp;text=Hello%20Sir" target="_blank"><img src="img/whatsapp.png" class="img-responsive" alt="whatsapp"></a>
+              <a href="https://api.whatsapp.com/send?phone=918004095274&amp;text=Hello%20Sir" target="_blank"><img src="img/whatsapp.png" class="img-responsive" alt="whatsapp"></a>
            </div>
         
     <div class="footer-bottom-sec">
