--- a/03-days-kathmandu-tour-package-from-gorakhpur.html
+++ b/03-days-kathmandu-tour-package-from-gorakhpur.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html><html dir="ltr" lang="en">
 <!-- Mirrored from www.nepalholidaytour.in/index.php by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 10 Jun 2024 06:42:38 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head><meta name="viewport" content="width=device-width,initial-scale=1.0" /><meta charset="utf-8">
-<title>Nepal Tour Package from Gorakhpur | Nepal Holiday Tour From Gorakhpur | Trip To Nepal From Gorakhpur</title>
+<title>Shree Pashupati Darshan Nepal yatra tour & travels</title>
 <meta name="description" content="If you are planning to visit Nepal with family OR friends then we offered the best and affordable tour packages to you. Book Nepal Tour Package From Gorakhpur, Trip To Nepal From Gorakhpur, Gorakhpur to Nepal Tour with us. "/>
 <meta name="keywords" content="Nepal tour package from gorakhpur, nepal tour operators in gorakhpur, trip to nepal from gorakhpur, nepal holiday tour from gorakhpur, nepal holiday tour package from gorakhpur, gorakhpur to nepal tour package, nepal tour price from gorakhpur, Nepal honeymoon package from gorakhpur, holiday in nepal from gorakhpur, Nepal Vacation Package from gorakhpur, Nepal tour itinerary from Gorakhpur, Nepal tour by car from Gorakhpur, nepal tour by road from gorakhpur, Explore the Best of Nepal From Gorakhpur."/>
 <meta property="og:title" content="Explore the Best of Nepal From Gorakhpur"/><meta property="og:site_name" content="RS Tour and Travels"/><meta property="og:url" content="index.html"/><meta property="og:description" content="Book Nepal Tour Package From Gorakhpur, Trip To Nepal From Gorakhpur, Gorakhpur to Nepal Tour with us. If you are planning to visit Nepal with family OR friends then we offered the best and affordable tour packages to you."/><meta property="og:type" content="Service"/><meta property="og:image" content="img/promo.jpg"/>
@@ -17,7 +16,7 @@
 <meta name="distribution" content="global"/>
 <meta name="document-type" content="Public"/>
 <meta name="Classification" content="Explore the Best of Nepal From Gorakhpur, Nepal tour operators and nepal tour package."/>
-<link rel="icon" type="image/png" href="img/m-logo.png"/>
+<link rel="icon" type="image/png" href="img/rp-img/logo-banner/logo.webp"/>
 <link rel="canonical" href="index.html" />
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-79EBH6BS1M"></script>
@@ -44,20 +43,20 @@
 <header class="header-sec">
 <div class="header-top">
 <div class="container">
-    <div class="row">
-        <div class="col-md-7">
-           <h4>Shree Pashupati Darshan Nepal yatra tour & travels</h4> 
-        </div>
-        <div class="col-md-2">
-            <ul>
-                <li><i class="icofont-telephone"></i>+91-8004095274</li>
-                </ul>
-        </div>
-        <div class="col-md-3">
-            <ul>
-                <li><i class="icofont-email"></i> infoPashupati@gmail.com</li>
-                </ul>
-        </div></div></div></div>
+<div class="row">
+    <div class="col-md-7">
+       <h4>Shree Pashupati Darshan Nepal yatra tour & travels</h4> 
+    </div>
+    <div class="col-md-2">
+        <ul>
+            <li><i class="icofont-telephone"></i>+91-8004095274</li>
+            </ul>
+    </div>
+    <div class="col-md-3">
+        <ul>
+            <li><i class="icofont-email"></i> infoPashupati@gmail.com</li>
+            </ul>
+    </div></div></div></div>
 <div class="hd-sec" style="color:white;">
 <div class="container" style="color:white;">
 <div class="row" style="background-color:white;">
@@ -82,7 +81,7 @@
             <li><a href="kathmandu-tour-package-from-gorakhpur.html">Kathmandu Tour Package</a></li>
             <li><a href="muktinath-tour-package-from-gorakhpur.html">Muktinath Tour Package</a></li>
             <li><a href="#">Chitwan Tour Package</a></li>
-            <li><a href="#">Bandipur Tour Package</a></li>
+            <li><a href="#">janakpurdham Tour Package</a></li>
             <li><a href="#">Lumbini Tour Package</a></li>
             <li><a href="#">Trekking Tour Package</a></li>
             <li><a href="#">Adventure Tour Package</a></li>
@@ -256,7 +255,7 @@
     <div class="col-md-4 col-sm-6 footer-widget">
     <div class="footer-wedget-one">
     <h2>About us</h2>
-    <p>RS Tour And Travels is a leading Tour operator for Nepal, Char-Dham Yatra, Manali, Kashmir, Gangtok & Darjeeling (Sikkim). We provide customised Tour Packages for Nepal from Gorakhpur. We have our own range of luxury vehicles across big (Bus & Tempo Traveller) and small ( Car) segments which helps in making travel convenient and affordable.</p>
+    <p>Shree Pashupati Darshan Nepal yatra tour & travels is a leading Tour operator for Nepal,Darjeeling tour, Sikkim tour, Kamakhaya tour, Kashmir, Gangtok & Darjeeling (Sikkim). We provide customised Tour Packages for Nepal from Gorakhpur. We have our own range of luxury vehicles across big (Bus & Tempo Traveller) and small ( Car) segments which helps in making travel convenient and affordable.</p>
     </div>
     </div>
     <div class="col-md-3 col-sm-6 footer-widget">
@@ -267,8 +266,10 @@
     <li><a href="#">Pokhara Tour Package</a></li>
     <li><a href="#">Chitwan Jungle safari</a></li>
     <li><a href="muktinath-tour-package-from-gorakhpur.html">Muktinath Tour Package</a></li>
-    <li><a href="#">Char Dham Yatra Package</a></li>
-    <li><a href="#">Manali Tour Package</a></li>
+    <li><a href="#">Dargeeling</a></li>
+    <li><a href="#">Sikkim</a></li>
+    <li><a href="#">Kamakhaya</a></li>
+    <!-- <li><a href="#">Manali Tour Package</a></li> -->
                 </ul>
         </div>
     </div>
@@ -287,20 +288,20 @@
         <h2>Our Address</h2>
             <div class="footer-contact-info-text">
                 <span style="color:white;">
-                Gida Sector 13(s5/10),Gorakhpur</span>
+                    Nautanwa Bypass, Sanouli Road U.P. 273164 India</span>
            </div>
             <div class="footer-contact-info-text">
-                <span style="color:whiterkTour&Traveler@gmail.com</span>
+                <span style="color:white">infoPashupati@gmail.com</span>
             </div>
             <div class="footer-contact-info-text">
-            <span style="color:white;">+91-7355973995</span>
+            <span style="color:white;">+91-8004095274</span>
         </div>
     </div>
        <div class="whatsapp">
               <a href="#" target="_blank" width="10%"><img src="img/fb.png" class="img-responsive" alt="whatsapp"></a>
            </div>
         <div class="whatsapp2">
-              <a href="https://api.whatsapp.com/send?phone=917355973995&amp;text=Hello%20Sir" target="_blank"><img src="img/whatsapp.png" class="img-responsive" alt="whatsapp"></a>
+              <a href="https://api.whatsapp.com/send?phone=918004095274&amp;text=Hello%20Sir" target="_blank"><img src="img/whatsapp.png" class="img-responsive" alt="whatsapp"></a>
            </div>
         
     <div class="footer-bottom-sec">
