--- a/index-2.html
+++ b/index-2.html
@@ -81,7 +81,7 @@
             <li><a href="kathmandu-tour-package-from-gorakhpur.html">Kathmandu Tour Package</a></li>
             <li><a href="muktinath-tour-package-from-gorakhpur.html">Muktinath Tour Package</a></li>
             <li><a href="#">Chitwan Tour Package</a></li>
-            <li><a href="#">Bandipur Tour Package</a></li>
+            <li><a href="#">janakpurdham Tour Package</a></li>
             <li><a href="#">Lumbini Tour Package</a></li>
             <li><a href="#">Trekking Tour Package</a></li>
             <li><a href="#">Adventure Tour Package</a></li>
@@ -146,7 +146,7 @@
                  
             <div class="col-md-7">
              <h1>Adventurous, Spiritual and Beautiful Nepal </h1>
-            <P>Nepal is a beautiful country with diverse landscapes and rich cultural heritage influenced by Hinduism and Buddhism. There are various tour destinations available depending on your preferences and interests. Some popular attractions in Nepal include Kathmandu, Pokhara, Chitwan National Park, Lumbini, Bhaktapur, Nagarkot, Bandipur, Dhulikhel and the Everest region Where you can visit and get a new experience. Nepal is dotted with ancient temples, palaces, and monasteries. The UNESCO World Heritage Sites in Nepal include Pashupatinath Temple, Boudhanath Stupa, Swayambhunath Stupa, and Bhaktapur Durbar Square, among others.</P>
+            <P>Nepal is a beautiful country with diverse landscapes and rich cultural heritage influenced by Hinduism and Buddhism. There are various tour destinations available depending on your preferences and interests. Some popular attractions in Nepal include Kathmandu, Pokhara, Chitwan National Park, Lumbini, Bhaktapur, Nagarkot, janakpurdham, Dhulikhel and the Everest region Where you can visit and get a new experience. Nepal is dotted with ancient temples, palaces, and monasteries. The UNESCO World Heritage Sites in Nepal include Pashupatinath Temple, Boudhanath Stupa, Swayambhunath Stupa, and Bhaktapur Durbar Square, among others.</P>
             </div>
             <div class="col-md-12">
             <P>Some Adventure activities in Nepal like trekking, rafting and wildlife safaris are also popular. Nepal has many high mountains, including Mount Everest, which makes it a popular destination if you are interested in trekking and mountaineering. The Annapurna Circuit and Everest Base Camp treks are among the most famous ones. Besides mountains, Nepal also offers picturesque landscapes, such as Pokhara's Phewa Lake, the lush green valleys of Langtang, and the terraced fields of the Kathmandu Valley etc.</P>
@@ -195,10 +195,10 @@
                             <a class="btn btn-hero" role="button" href="07-days-muktinath-tour-package-from-gorakhpur.html">Read More</a></center>
                 </div>
              <div class="col-md-4" style="background:lavender">
-                    <img src="img/bandipur-tour-with-mm-tour.jpg" alt="Bandipur tour package from gorakhpur, Sunrise in bandipur nepal">
+                    <img src="img/janakpurdham-tour-with-mm-tour.avif" alt="janakpurdham tour package from gorakhpur, Sunrise in janakpurdham nepal">
                         <center><h4>06 Nights / 07 Days</h4>
-                            <h3><a href="pokhara-bandipur-tour-package-from-gorakhpur.html">Bandipur Tour From Gorakhpur</a></h3>
-                            <a class="btn btn-hero" role="button" href="pokhara-bandipur-tour-package-from-gorakhpur.html">Read More</a></center>
+                            <h3><a href="pokhara-janakpurdham-tour-package-from-gorakhpur.html">janakpurdham Tour From Gorakhpur</a></h3>
+                            <a class="btn btn-hero" role="button" href="pokhara-janakpurdham-tour-package-from-gorakhpur.html">Read More</a></center>
                 </div>
                  <div class="col-md-4" style="background:lavender">
                     <img src="img/lumbini-tour-with-mm-tour.jpg" alt="Lumbini tour package from gorakhpur">
@@ -295,7 +295,7 @@
     <div class="col-md-4 col-sm-6 footer-widget">
     <div class="footer-wedget-one">
     <h2>About us</h2>
-    <p>Shree Pashupati Darshan Nepal yatra tour & travels is a leading Tour operator for Nepal, Char-Dham Yatra, Manali, Kashmir, Gangtok & Darjeeling (Sikkim). We provide customised Tour Packages for Nepal from Gorakhpur. We have our own range of luxury vehicles across big (Bus & Tempo Traveller) and small ( Car) segments which helps in making travel convenient and affordable.</p>
+    <p>Shree Pashupati Darshan Nepal yatra tour & travels is a leading Tour operator for Nepal,Darjeeling tour, Sikkim tour, Kamakhaya tour, Kashmir, Gangtok & Darjeeling (Sikkim). We provide customised Tour Packages for Nepal from Gorakhpur. We have our own range of luxury vehicles across big (Bus & Tempo Traveller) and small ( Car) segments which helps in making travel convenient and affordable.</p>
     </div>
     </div>
     <div class="col-md-3 col-sm-6 footer-widget">
@@ -306,8 +306,10 @@
     <li><a href="#">Pokhara Tour Package</a></li>
     <li><a href="#">Chitwan Jungle safari</a></li>
     <li><a href="muktinath-tour-package-from-gorakhpur.html">Muktinath Tour Package</a></li>
-    <li><a href="#">Char Dham Yatra Package</a></li>
-    <li><a href="#">Manali Tour Package</a></li>
+    <li><a href="#">Dargeeling</a></li>
+    <li><a href="#">Sikkim</a></li>
+    <li><a href="#">Kamakhaya</a></li>
+    <!-- <li><a href="#">Manali Tour Package</a></li> -->
                 </ul>
         </div>
     </div>
