--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!-- Mirrored from www.nepalholidaytour.in/index.php by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 10 Jun 2024 06:42:38 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head><meta name="viewport" content="width=device-width,initial-scale=1.0" /><meta charset="utf-8">
-<title>Shree Pashupati Darshan Nepal yatra tour & travels</title>
+<title>Nepal Temple Darashan tour & travel</title>
 <meta name="description" content="If you are planning to visit Nepal with family OR friends then we offered the best and affordable tour packages to you. Book Nepal Tour Package From Gorakhpur, Trip To Nepal From Gorakhpur, Gorakhpur to Nepal Tour with us. "/>
 <meta name="keywords" content="Nepal tour package from gorakhpur, nepal tour operators in gorakhpur, trip to nepal from gorakhpur, nepal holiday tour from gorakhpur, nepal holiday tour package from gorakhpur, gorakhpur to nepal tour package, nepal tour price from gorakhpur, Nepal honeymoon package from gorakhpur, holiday in nepal from gorakhpur, Nepal Vacation Package from gorakhpur, Nepal tour itinerary from Gorakhpur, Nepal tour by car from Gorakhpur, nepal tour by road from gorakhpur, Explore the Best of Nepal From Gorakhpur."/>
-<meta property="og:title" content="Explore the Best of Nepal From Gorakhpur"/><meta property="og:site_name" content="RS Tour and Travels"/><meta property="og:url" content="index.html"/><meta property="og:description" content="Book Nepal Tour Package From Gorakhpur, Trip To Nepal From Gorakhpur, Gorakhpur to Nepal Tour with us. If you are planning to visit Nepal with family OR friends then we offered the best and affordable tour packages to you."/><meta property="og:type" content="Service"/><meta property="og:image" content="img/promo.jpg"/>
+<meta property="og:title" content="Explore the Best of Nepal From Gorakhpur"/><meta property="og:site_name" content="nepal temple darashan"/><meta property="og:url" content="index.html"/><meta property="og:description" content="Book Nepal Tour Package From Gorakhpur, Trip To Nepal From Gorakhpur, Gorakhpur to Nepal Tour with us. If you are planning to visit Nepal with family OR friends then we offered the best and affordable tour packages to you."/><meta property="og:type" content="Service"/><meta property="og:image" content="img/promo.jpg"/>
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@ RS Tour and Travels">
+<meta name="twitter:site" content="@ nepal temple darashan">
 <meta name="twitter:title" content="Explore the Best of Nepal From Gorakhpur">
 <meta name="twitter:description" content="Book Nepal Tour Package From Gorakhpur, Trip To Nepal From Gorakhpur, Gorakhpur to Nepal Tour with us. If you are planning to visit Nepal with family OR friends then we offered the best and affordable tour packages to you.">
 <meta name="google-site-verification" content="CuKw4Tkx1lqOtFyjLYp_w1bfvTV00cnYOUrH8zqN4TE" />
@@ -16,7 +16,7 @@
 <meta name="distribution" content="global"/>
 <meta name="document-type" content="Public"/>
 <meta name="Classification" content="Explore the Best of Nepal From Gorakhpur, Nepal tour operators and nepal tour package."/>
-<link rel="icon" type="image/png" href="img/rp-img/logo-banner/logo.webp"/>
+<link rel="icon" type="image/png" href="img/nepal-img/logo.png"/>
 <link rel="canonical" href="index.html" />
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-79EBH6BS1M"></script>
@@ -45,33 +45,33 @@
 <div class="container">
 <div class="row">
     <div class="col-md-7">
-       <h4>Shree Pashupati Darshan Nepal yatra tour & travels</h4> 
+       <h4>Nepal Temple Darashan tour & travel</h4> 
     </div>
     <div class="col-md-2">
         <ul>
-            <li><i class="icofont-telephone"></i>+91-8004095274</li>
+            <li><i class="icofont-telephone"></i>+91-6393573030</li>
             </ul>
     </div>
     <div class="col-md-3">
         <ul>
-            <li><i class="icofont-email"></i> infoPashupati@gmail.com</li>
+            <li><i class="icofont-email"></i> infoDarashan@gmail.com</li>
             </ul>
     </div></div></div></div>
-<div class="hd-sec" style="color:white;">
+<div class="hd-sec" style="color:white; ">
 <div class="container" style="color:white;">
-<div class="row" style="background-color:white;">
+<div class="row" style="background-color:white; ">
 <div class="col-md-4 col-sm-12 col-xs-8 classic-logo">
-<a href="index-2.html"><img src="img/rp-img/logo-banner/logo.webp" alt="MM Tour and Travels Gorakhpur Logo" style="padding-top:5px; width:60px; height:60px;"></a>
+<a href="index-2.html"><img src="img/nepal-img/logo.png" alt="nepal temple darashan tour& Travels Gorakhpur Logo" style="padding-top:5px; width:150px; height:120px;"></a>
 </div>
-<div class="col-md-3 col-xs-8 responsive-logo">
+<div  class="col-md-3 col-xs-8 responsive-logo">
 <a href="index-2.html">
-    <img src="img/rp-img/logo-banner/logo.webp" alt="Logo of MM Tour and Travel Gorakhpur " style="padding-top:10px; width:60px; height:60px;">
+    <img src="img/nepal-img/logo.png"  alt="Logo of nepal temple darashan tour& Travel Gorakhpur " style="padding-top:10px; width:150px; height:120px;">
     </a>
 </div>
 <div class="mobile-nav-menu"></div>
 <div class="col-md-8 col-sm-12 nav-menu">
 <div class="menu">
-<nav id="main-menu" class="main-menu">
+<nav id="main-menu" style=" margin-top: 30px;" class="main-menu">
 <ul>
 <li><a href="index-2.html">Home</a>
 <li><a href="about.html">About Us</a></li>
@@ -81,7 +81,7 @@
             <li><a href="kathmandu-tour-package-from-gorakhpur.html">Kathmandu Tour Package</a></li>
             <li><a href="muktinath-tour-package-from-gorakhpur.html">Muktinath Tour Package</a></li>
             <li><a href="#">Chitwan Tour Package</a></li>
-            <li><a href="#">Bandipur Tour Package</a></li>
+            <li><a href="#">janakpurdham Tour Package</a></li>
             <li><a href="#">Lumbini Tour Package</a></li>
             <li><a href="#">Trekking Tour Package</a></li>
             <li><a href="#">Adventure Tour Package</a></li>
@@ -141,12 +141,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-                <img src="img/pashupati-darshan-img/genda.webp" alt="Explore Nepal Tour Package From Gorakhpur">
+                <img src="img/nepal-img/chitwan.webp" alt="Explore Nepal Tour Package From Gorakhpur">
                  </div>
 
             <div class="col-md-7">
              <h1>Adventurous, Spiritual and Beautiful Nepal </h1>
-            <P>Nepal is a beautiful country with diverse landscapes and rich cultural heritage influenced by Hinduism and Buddhism. There are various tour destinations available depending on your preferences and interests. Some popular attractions in Nepal include Kathmandu, Pokhara, Chitwan National Park, Lumbini, Bhaktapur, Nagarkot, Bandipur, Dhulikhel and the Everest region Where you can visit and get a new experience. Nepal is dotted with ancient temples, palaces, and monasteries. The UNESCO World Heritage Sites in Nepal include Pashupatinath Temple, Boudhanath Stupa, Swayambhunath Stupa, and Bhaktapur Durbar Square, among others.</P>
+            <P>Nepal is a beautiful country with diverse landscapes and rich cultural heritage influenced by Hinduism and Buddhism. There are various tour destinations available depending on your preferences and interests. Some popular attractions in Nepal include Kathmandu, Pokhara, Chitwan National Park, Lumbini, Bhaktapur, Nagarkot, janakpurdham, Dhulikhel and the Everest region Where you can visit and get a new experience. Nepal is dotted with ancient temples, palaces, and monasteries. The UNESCO World Heritage Sites in Nepal include Pashupatinath Temple, Boudhanath Stupa, Swayambhunath Stupa, and Bhaktapur Durbar Square, among others.</P>
             </div>
             <div class="col-md-12">
             <P>Some Adventure activities in Nepal like trekking, rafting and wildlife safaris are also popular. Nepal has many high mountains, including Mount Everest, which makes it a popular destination if you are interested in trekking and mountaineering. The Annapurna Circuit and Everest Base Camp treks are among the most famous ones. Besides mountains, Nepal also offers picturesque landscapes, such as Pokhara's Phewa Lake, the lush green valleys of Langtang, and the terraced fields of the Kathmandu Valley etc.</P>
@@ -165,20 +165,20 @@
         <div class="row">
             <h2>Papular Nepal Tour Package With Day Wise Itinerary</h2>
             <p style="color:black">If you plan a Nepal tour, it would be helpful to consider the duration of your trip, budget and specific places or activities you'd like to include. Let us know if you need more information or assistance in planning your Nepal tour.</p>
-            <div class="col-md-4" style="background:lavender">
-                    <img src="img/pokhara-tour-with-mm-travels.jpg" alt="Pokhara tour package from gorakhpur">
+            <div class="col-md-4 img-size" style=" padding: 8px; box-shadow: 1px 0px 5px 1px black;"  >
+                    <img src="img/nepal-img/pokhra.webp" alt="Pokhara tour package from gorakhpur">
                         <center><h4>02 Nights / 03 Days</h4>
                             <h3><a href="03-days-pokhara-tour-package-from-gorakhpur.html">Pokhara Tour From Gorakhpur</a></h3>
                             <a class="btn btn-hero" role="button" href="03-days-pokhara-tour-package-from-gorakhpur.html">Read More</a></center>
                 </div>
-             <div class="col-md-4" style="background:lavender">
-                    <img src="img/kathmandu-tour-from-gorakhpur.jpg" alt="Kathmandu tour package from gorakhpur, pashupatinath temple kathmandu nepal">
+             <div class="col-md-4 img-size" style=" padding: 8px; box-shadow: 1px 0px 5px 1px black;"  >
+                    <img src="img/nepal-img/kathmandu-temple.webp" alt="Kathmandu tour package from gorakhpur, pashupatinath temple kathmandu nepal">
                         <center><h4>02 Nights / 03 Days</h4>
                             <h3><a href="03-days-kathmandu-tour-package-from-gorakhpur.html">Kathmandu Tour From Gorakhpur</a></h3>
                             <a class="btn btn-hero" role="button" href="03-days-kathmandu-tour-package-from-gorakhpur.html">Read More</a></center>
                 </div>
-             <div class="col-md-4" style="background:lavender">
-                    <img src="img/chitwan-tour-with-mm-tour.jpg" alt="Chitwan tour package from gorakhpur, Chitwan National Park Nepal">
+             <div class="col-md-4 img-size" style=" padding: 8px; box-shadow: 1px 0px 5px 1px black;"  >
+                    <img src="img/nepal-img/genda.webp" alt="Chitwan tour package from gorakhpur, Chitwan National Park Nepal">
                         <center><h4>03 Nights / 04 Days</h4>
                             <h3><a href="chitwan-tour-package-from-gorakhpur.html">Chitwan Tour From Gorakhpur</a></h3>
                             <a class="btn btn-hero" role="button" href="chitwan-tour-package-from-gorakhpur.html">Read More</a></center>
@@ -188,20 +188,20 @@
 <section id="sgc">
     <div class="container">
         <div class="row">
-            <div class="col-md-4" style="background:lavender">
-                    <img src="img/muktinath-tour-with-mm-tour.jpg" alt="Muktinath tour package from gorakhpur, Muktinath Temple Tour">
+            <div class="col-md-4 img-size" style=" padding: 8px; box-shadow: 1px 0px 5px 1px black;"  >
+                    <img src="img/nepal-img/muktinath-temple.webp" alt="Muktinath tour package from gorakhpur, Muktinath Temple Tour">
                         <center><h4>06 Nights / 07 Days</h4>
                             <h3><a href="07-days-muktinath-tour-package-from-gorakhpur.html">Muktinath Tour From Gorakhpur</a></h3>
                             <a class="btn btn-hero" role="button" href="07-days-muktinath-tour-package-from-gorakhpur.html">Read More</a></center>
                 </div>
-             <div class="col-md-4" style="background:lavender">
-                    <img src="img/bandipur-tour-with-mm-tour.jpg" alt="Bandipur tour package from gorakhpur, Sunrise in bandipur nepal">
+             <div class="col-md-4 img-size" style=" padding: 8px; box-shadow: 1px 0px 5px 1px black;"  >
+                    <img src="img/janakpurdham-tour-with-mm-tour.avif" alt="janakpurdham tour package from gorakhpur, Sunrise in janakpurdham nepal">
                         <center><h4>06 Nights / 07 Days</h4>
-                            <h3><a href="pokhara-bandipur-tour-package-from-gorakhpur.html">Bandipur Tour From Gorakhpur</a></h3>
-                            <a class="btn btn-hero" role="button" href="pokhara-bandipur-tour-package-from-gorakhpur.html">Read More</a></center>
+                            <h3><a href="pokhara-janakpurdham-tour-package-from-gorakhpur.html">janakpurdham Tour From Gorakhpur</a></h3>
+                            <a class="btn btn-hero" role="button" href="pokhara-janakpurdham-tour-package-from-gorakhpur.html">Read More</a></center>
                 </div>
-                 <div class="col-md-4" style="background:lavender">
-                    <img src="img/lumbini-tour-with-mm-tour.jpg" alt="Lumbini tour package from gorakhpur">
+                 <div class="col-md-4 img-size" style=" padding: 8px; box-shadow: 1px 0px 5px 1px black;"  >
+                    <img src="img/nepal-img/lumbani.webp" alt="Lumbini tour package from gorakhpur">
                         <center><h3><a href="#">Lumbini Tour From Gorakhpur</a></h3>
                             <a class="btn btn-hero" role="button" href="#">Read More</a></center>
         </div>
@@ -215,7 +215,7 @@
             <P>If you are planning to go to Nepal as an official tour, family tour or tour with friends, then we will recommend you to start your journey from Gorakhpur. Traveling from Gorakhpur to Nepal offers many benefits to the travelers. Because Gorakhpur is located very near from the border with Nepal, making it a convenient starting point for exploring Nepal. Being close to Nepal border, you can go to Nepal by road from Gorakhpur. While touring by road, you can get information about all the small and big points (destination ) through which you pass. Secondly, the main purpose of touring is to enjoy all the scenes along the way which are full of romance. The journey from gorakhpur to nepal takes around 3-4 hours via lumbini and 8-10 hours via Kathmandu (depending on the route and traffic conditions), Due to which you can get benefits in many other ways as well, about which we have explained below in some detail.</P>
             </div>
             <div class="col-md-5">
-                <img src="img/gorakhpur-railway-station.jpg" alt="Explore Nepal From Gorakhpur"> <center><a class="text-center">Gorakhpur Railway Station</a></center>
+                <img src="img/nepal-img/gorakhpur-railway.jpg" alt="Explore Nepal From Gorakhpur"> <center><a class="text-center">Gorakhpur Railway Station</a></center>
                  </div>
             <div class="col-md-12">
                 <h1>Advantage of Nepal Tour From Gorakhpur</h1>
@@ -234,7 +234,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-               <img src="img/gorakhnath-temple-gorakhpur.jpg" alt="Gorakhnath Temple, Gorakhpur"> <center><a class="text-center">Gorakhnath Temple </a></center>
+               <img src="img/nepal-img/Gorakhnath-Temple-in-Gorakhpur.webp" alt="Gorakhnath Temple, Gorakhpur"> <center><a class="text-center">Gorakhnath Temple </a></center>
                </div>
             <div class="col-md-7">
              <h1>How To Reach Gorakhpur for Nepal Tour </h1>
@@ -259,13 +259,13 @@
         </div>
     </div>
 </section>
-<section id="counter">
+<!-- <section id="counter">
     <div class="container">
        <div class="row">
        </div>
     </div>
-</section>
-<section id="bison" style="background:gainsboro">
+</section> -->
+<!-- <section id="bison" style="background:gainsboro">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -284,7 +284,7 @@
                 </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <script src="widget-v4.tidiochat.com/1_35_0/static/js/render.c25d885567cc682a9c5b.html" async></script>
 <footer class="footer">
@@ -295,7 +295,7 @@
     <div class="col-md-4 col-sm-6 footer-widget">
     <div class="footer-wedget-one">
     <h2>About us</h2>
-    <p>Shree Pashupati Darshan Nepal yatra tour & travels is a leading Tour operator for Nepal, Char-Dham Yatra, Manali, Kashmir, Gangtok & Darjeeling (Sikkim). We provide customised Tour Packages for Nepal from Gorakhpur. We have our own range of luxury vehicles across big (Bus & Tempo Traveller) and small ( Car) segments which helps in making travel convenient and affordable.</p>
+    <p>Nepal Temple Darashan tour & travel is a leading Tour operator for Nepal,Darjeeling tour, Sikkim tour, Kamakhaya tour, Kashmir, Gangtok & Darjeeling (Sikkim). We provide customised Tour Packages for Nepal from Gorakhpur. We have our own range of luxury vehicles across big (Bus & Tempo Traveller) and small ( Car) segments which helps in making travel convenient and affordable.</p>
     </div>
     </div>
     <div class="col-md-3 col-sm-6 footer-widget">
@@ -306,8 +306,10 @@
     <li><a href="#">Pokhara Tour Package</a></li>
     <li><a href="#">Chitwan Jungle safari</a></li>
     <li><a href="muktinath-tour-package-from-gorakhpur.html">Muktinath Tour Package</a></li>
-    <li><a href="#">Char Dham Yatra Package</a></li>
-    <li><a href="#">Manali Tour Package</a></li>
+    <li><a href="#">Dargeeling</a></li>
+    <li><a href="#">Sikkim</a></li>
+    <li><a href="#">Kamakhaya</a></li>
+    <!-- <li><a href="#">Manali Tour Package</a></li> -->
                 </ul>
         </div>
     </div>
@@ -326,20 +328,20 @@
         <h2>Our Address</h2>
             <div class="footer-contact-info-text">
                 <span style="color:white;">
-                    Nautanwa Bypass, Sanouli Road U.P. 273164 India</span>
+                    RAILWAY STATION ROAD, NEAR: MANASH CONTINENTAL HOTEL,IRRIGATION COLONY,KAWWA BAGH COLONY, GORAKHPUR, UTTAR PRADESH 273009</span>
            </div>
             <div class="footer-contact-info-text">
-                <span style="color:white">infoPashupati@gmail.com</span>
+                <span style="color:white">infoDarashan@gmail.com</span>
             </div>
             <div class="footer-contact-info-text">
-            <span style="color:white;">+91-8004095274</span>
+            <span style="color:white;">+91-6393573030</span>
         </div>
     </div>
        <div class="whatsapp">
               <a href="#" target="_blank" width="10%"><img src="img/fb.png" class="img-responsive" alt="whatsapp"></a>
            </div>
         <div class="whatsapp2">
-              <a href="https://api.whatsapp.com/send?phone=918004095274&amp;text=Hello%20Sir" target="_blank"><img src="img/whatsapp.png" class="img-responsive" alt="whatsapp"></a>
+              <a href="https://api.whatsapp.com/send?phone=916393573030&amp;text=Hello%20Sir" target="_blank"><img src="img/whatsapp.png" class="img-responsive" alt="whatsapp"></a>
            </div>
         
     <div class="footer-bottom-sec">
@@ -347,7 +349,7 @@
     <div class="row">
     <div class="col-md-7">
     <div class="copy-right">
-    <span>&copy; 2018 GyanviDigital. All right reserved.</span>
+    <span>&copy; 2018 <a href="https://gyanvidigital.com/">GyanviDigital </a>. All right reserved.</span>
     </div></div>
     <div class="col-md-5">
     </div></div></div></div>
