--- a/about.html
+++ b/about.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html><html dir="ltr" lang="en">
-<!-- Mirrored from www.nepalholidaytour.in/about.php by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 10 Jun 2024 06:42:38 GMT -->
+<!-- Mirrored from www.nepalholidaytour.in/index.php by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 10 Jun 2024 06:42:38 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head><meta name="viewport" content="width=device-width,initial-scale=1.0" /><meta charset="utf-8">
-<title>Top Nepal Tour Operator & Travel Agents in Gorakhpur</title>
-<meta name="description" content="Discover the best Nepal tour operator and travel agents in Gorakhpur offering unforgettable adventures. Explore the beauty of Nepal with expert tour operators in Gorakhpur, catering to all your travel needs and creating memorable experiences."/>
-<meta name="keywords" content="Top Travel Agents in Gorakhpur, Travel Agents in Gorakhpur, tour operators in gorakhpur, best tour operator in gorakhpur, nepal tour operators in gorakhpur."/>
-<meta property="og:title" content="Top Nepal Tour Operator & Travel Agents in Gorakhpur"/><meta property="og:site_name" content="Pashupati Darshan Tour and Travels"/><meta property="og:url" content="about.html"/><meta property="og:description" content="Discover the best Nepal tour operator and travel agents in Gorakhpur offering unforgettable adventures. Explore the beauty of Nepal with expert tour operators in Gorakhpur, catering to all your travel needs and creating memorable experiences."/><meta property="og:type" content="Service"/><meta property="og:image" content="img/promo.jpg"/>
+<title>Shree Pashupati Darshan Nepal yatra tour & travels</title>
+<meta name="description" content="If you are planning to visit Nepal with family OR friends then we offered the best and affordable tour packages to you. Book Nepal Tour Package From Gorakhpur, Trip To Nepal From Gorakhpur, Gorakhpur to Nepal Tour with us. "/>
+<meta name="keywords" content="Nepal tour package from gorakhpur, nepal tour operators in gorakhpur, trip to nepal from gorakhpur, nepal holiday tour from gorakhpur, nepal holiday tour package from gorakhpur, gorakhpur to nepal tour package, nepal tour price from gorakhpur, Nepal honeymoon package from gorakhpur, holiday in nepal from gorakhpur, Nepal Vacation Package from gorakhpur, Nepal tour itinerary from Gorakhpur, Nepal tour by car from Gorakhpur, nepal tour by road from gorakhpur, Explore the Best of Nepal From Gorakhpur."/>
+<meta property="og:title" content="Explore the Best of Nepal From Gorakhpur"/><meta property="og:site_name" content="RS Tour and Travels"/><meta property="og:url" content="index.html"/><meta property="og:description" content="Book Nepal Tour Package From Gorakhpur, Trip To Nepal From Gorakhpur, Gorakhpur to Nepal Tour with us. If you are planning to visit Nepal with family OR friends then we offered the best and affordable tour packages to you."/><meta property="og:type" content="Service"/><meta property="og:image" content="img/promo.jpg"/>
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@ Pashupati Darshan Tour and Travels">
-<meta name="twitter:title" content="Top Nepal Tour Operator & Travel Agents in Gorakhpur">
-<meta name="twitter:description" content="Discover the best Nepal tour operator and travel agents in Gorakhpur offering unforgettable adventures. Explore the beauty of Nepal with expert tour operators in Gorakhpur, catering to all your travel needs and creating memorable experiences.">
+<meta name="twitter:site" content="@ RS Tour and Travels">
+<meta name="twitter:title" content="Explore the Best of Nepal From Gorakhpur">
+<meta name="twitter:description" content="Book Nepal Tour Package From Gorakhpur, Trip To Nepal From Gorakhpur, Gorakhpur to Nepal Tour with us. If you are planning to visit Nepal with family OR friends then we offered the best and affordable tour packages to you.">
+<meta name="google-site-verification" content="CuKw4Tkx1lqOtFyjLYp_w1bfvTV00cnYOUrH8zqN4TE" />
 <meta name="twitter:image" content="img/promo.jpg">
 <meta name="Revisit-After" CONTENT="7 Days"/>
 <meta name="distribution" content="global"/>
 <meta name="document-type" content="Public"/>
-<meta name="Classification" content="Nepal tour operator and travel agents in gorakhpur."/>
-<link rel="canonical" href="about.html" />
-
+<meta name="Classification" content="Explore the Best of Nepal From Gorakhpur, Nepal tour operators and nepal tour package."/>
 <link rel="icon" type="image/png" href="img/rp-img/logo-banner/logo.webp"/>
+<link rel="canonical" href="index.html" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-79EBH6BS1M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-79EBH6BS1M');
+</script>
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800" rel="stylesheet">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/magnific-popup.css">
@@ -72,7 +81,7 @@
             <li><a href="kathmandu-tour-package-from-gorakhpur.html">Kathmandu Tour Package</a></li>
             <li><a href="muktinath-tour-package-from-gorakhpur.html">Muktinath Tour Package</a></li>
             <li><a href="#">Chitwan Tour Package</a></li>
-            <li><a href="#">Bandipur Tour Package</a></li>
+            <li><a href="#">janakpurdham Tour Package</a></li>
             <li><a href="#">Lumbini Tour Package</a></li>
             <li><a href="#">Trekking Tour Package</a></li>
             <li><a href="#">Adventure Tour Package</a></li>
@@ -129,7 +138,7 @@
     <div class="col-md-4 col-sm-6 footer-widget">
     <div class="footer-wedget-one">
     <h2>About us</h2>
-    <p>Shree Pashupati Darshan Nepal yatra tour & travels is a leading Tour operator for Nepal, Char-Dham Yatra, Manali, Kashmir, Gangtok & Darjeeling (Sikkim). We provide customised Tour Packages for Nepal from Gorakhpur. We have our own range of luxury vehicles across big (Bus & Tempo Traveller) and small ( Car) segments which helps in making travel convenient and affordable.</p>
+    <p>Shree Pashupati Darshan Nepal yatra tour & travels is a leading Tour operator for Nepal,Darjeeling tour, Sikkim tour, Kamakhaya tour, Kashmir, Gangtok & Darjeeling (Sikkim). We provide customised Tour Packages for Nepal from Gorakhpur. We have our own range of luxury vehicles across big (Bus & Tempo Traveller) and small ( Car) segments which helps in making travel convenient and affordable.</p>
     </div>
     </div>
     <div class="col-md-3 col-sm-6 footer-widget">
@@ -140,8 +149,10 @@
     <li><a href="#">Pokhara Tour Package</a></li>
     <li><a href="#">Chitwan Jungle safari</a></li>
     <li><a href="muktinath-tour-package-from-gorakhpur.html">Muktinath Tour Package</a></li>
-    <li><a href="#">Char Dham Yatra Package</a></li>
-    <li><a href="#">Manali Tour Package</a></li>
+    <li><a href="#">Dargeeling</a></li>
+    <li><a href="#">Sikkim</a></li>
+    <li><a href="#">Kamakhaya</a></li>
+    <!-- <li><a href="#">Manali Tour Package</a></li> -->
                 </ul>
         </div>
     </div>
